# final-project-teleop

./: .gitignore  README.md  haptics.repos  teleop.repos
docs/: modules.html  searchindex.js  teleop_tasks.hand.html  teleop_tasks.objects.html  teleop_tasks.ring_sim.html  teleop_tasks.ros_gz_joint_client.html
docs/_sources/: teleop_tasks.finger_joint_mapper.rst.txt  teleop_tasks.ring_sim.rst.txt  teleop_tasks.ros_gz_joint_client.rst.txt  teleop_tasks.rst.txt
docs/teleop/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  teleop.html  teleop.orchestrator.html
docs/teleop_avatar/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  (+4 more)
teleop/: package.xml  setup.py
teleop_avatar/: README.md  package.xml  setup.cfg  setup.py
teleop_haptics/: README.md  package.xml  setup.cfg  setup.py
teleop_interfaces/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
teleop_sensing/: README.md  package.xml  setup.cfg  setup.py
teleop_sensing/config/: see-camera.rviz  see-frame.rviz  tag16_config.yaml  tag36_config.yaml
teleop_sensing/launch/: image_only.launch.xml  image_proc_with_remap.launch.py  launch_RS_April.xml  launch_RS_detect.xml  launch_cv_process.xml  ring_cv.launch.xml  rings_cv.launch.xml
teleop_sensing/teleop_sensing/: cv_filers.py  cv_filters.py  cv_pick_color_range.py  cv_process.py
teleop_sensing/test/: test_cv_filter.py
teleop_tasks/: README.md  package.xml  setup.cfg  setup.py
teleop_visualization/: README.md  package.xml  setup.cfg  setup.py
(+178 files in other folders)
