<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_sensing</name>
  <version>0.0.1</version>
  <description>Find the target object on the field</description>
  <maintainer email="leograyc@gmail.com">Leo Chen</maintainer>
  <license>LGPL-3.0-only</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>ros_launch</exec_depend>
  <exec_depend>rviz2</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
